2011-08-02  Nick Alcock  <nick.alcock@oracle.com>

	runtest.sh: Support triggers (in @@trigger options and .t files)
	and a new --execute option.  Postprocess CPU and probe IDs out of
	expected results.  Fix use of call_with_timeout (now named
	run_with_timeout) in cheap subshells (not requiring shell
	reinitialization).  Don't leak monitor state out of
	call_with_timeout.  Fix PASS/FAIL appearance bugs.

	test/triggers/Build: New file, build all named TRIGGERS,
	symlink them into test/triggers for the testsuite, and
	clean them up on 'make clean'.

	test/Build: New file, simply run test/triggers/Build.

2011-08-02  Nick Alcock  <nick.alcock@oracle.com>

	Makerules: No longer fail if CMDS contains more than one word.

	Makefunctions: Support post-linkage actions.
	README.build-system: Document them.

2011-08-02  Nick Alcock  <nick.alcock@oracle.com>

	More testsuite changes.

	runtest.sh: Support test logging, test timeouts, automatic diffs,
	expected-results postprocessing and capturing, D script
	preprocessing, and programmable expected-failure support. Refactor
	to reduce code repetition.
	GNUmakefile: Clean up test/log too.

2011-07-28  Shujing Zhao  <pearly.zhao@oracle.com>

	* test/dt_test/fired.d: New test case to test dt_test.

2011-07-18  Nick Alcock  <nick.alcock@oracle.com>

	Testsuite remodel.

	* demo/*: Rename to...
	* test/*: ... this.

	* runtest.sh: Migrate dt_flag setting out of this file:
	make data-driven, from the .d files themselves.
	Drop hardwired dtrace -e -p $pid-without-.d-file
	invocation of dtrace when regression testing was off.

	* test/buf/ring.d: Migrate options from runtest.sh.
	* test/intro/rwtime.d: Likewise.
	* test/intro/trussrw.d: Likewise.
	* test/profile/profpri.d: Likewise.
	* test/sched/pritime.d: Likewise.
	* test/sched/whererun.d: Likewise.
	* test/struct/rwinfo.d: Likewise.
	* test/user/badopen.d: Likewise.
	* test/user/errorpath.d: Likewise.
	* test/user/libc.d: Likewise.
	* test/user/userfunc.d: Likewise.