@@ -1,0 +1,26 @@
+dtrace: script 'test/dt_test/fired.d' matched 3 probes
+CPU     ID                    FUNCTION:NAME
+                                      :test         1
+                                      :test         2
+                                      :test         3
+                                      :test         4
+                                      :test         5
+                                      :test         6
+                                      :test         7
+                                      :test         8
+                                      :test         9
+                                      :test        10
+                                      :test        11
+                                      :test        12
+                                      :test        13
+                                      :test        14
+                                      :test        15
+                                      :test        16
+                                      :test        17
+                                      :test        18
+                                      :test        19
+                                      :test        20
+          
+                                       :END test probe is fired: 20
+          
+          
